WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114562
Width of last of consecutive tabs may be incorrect with "white-space: pre-wrap"
https://bugs.webkit.org/show_bug.cgi?id=114562
Summary
Width of last of consecutive tabs may be incorrect with "white-space: pre-wrap"
Antoine Quint
Reported
2013-04-13 05:15:48 PDT
Width of last of consecutive tabs may be incorrect with "white-space: pre-wrap"
Attachments
Patch
(3.79 KB, patch)
2013-04-13 05:17 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2013-04-13 05:17:57 PDT
Created
attachment 197935
[details]
Patch
Antoine Quint
Comment 2
2013-04-13 05:19:29 PDT
<
rdar://problem/13128214
>
WebKit Commit Bot
Comment 3
2013-04-13 09:37:20 PDT
Comment on
attachment 197935
[details]
Patch Clearing flags on attachment: 197935 Committed
r148358
: <
http://trac.webkit.org/changeset/148358
>
WebKit Commit Bot
Comment 4
2013-04-13 09:37:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug