Width of last of consecutive tabs may be incorrect with "white-space: pre-wrap" https://bugs.webkit.org/show_bug.cgi?id=114562

Reviewed by Dan Bernstein.

Source/WebCore:

When we measure the last word of a RenderText, make sure we use the correct x
position taking into account the current accumulated word measurements up to
this character. This is of particular importance in the case of tabs where the
measured width would differ based on the x position.

Test: fast/text/tab-last-word-in-renderer-pre-wrap.html

* rendering/RenderBlockLineLayout.cpp:
(WebCore::setLogicalWidthForTextRun):

LayoutTests:

* fast/text/tab-last-word-in-renderer-pre-wrap-expected.html: Added.
* fast/text/tab-last-word-in-renderer-pre-wrap.html: Added.


Canonical link: https://commits.webkit.org/132942@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148358 268f45cc-cd09-0410-ab3c-d52691b4dbfc